k8s/base/blue-green/service-green.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ${SERVICE_NAME}-green
  namespace: ${K8S_NAMESPACE}
  labels:
    app: ${APP_NAME}
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: ClusterIP
  selector:
    app: ${APP_NAME}
    version: green
  ports:
    - name: http
      port: 80
      targetPort: 80
